<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    This is the main dashboard screen-->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/white"
            app:layout_scrollFlags="scroll|enterAlways"/>


        <LinearLayout
            android:id="@+id/headerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:text="@string/label_category"/>

            <!-- filter chips -->
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:paddingTop="8dp">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipSpacingHorizontal="8dp"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/chip_all"/>


                    <com.google.android.material.chip.Chip style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/chip_breakfast"/>

                    <com.google.android.material.chip.Chip style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/chip_brunch"/>

                    <com.google.android.material.chip.Chip style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/chip_lunch"/>

                    <com.google.android.material.chip.Chip style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/chip_dinner"/>

                    <com.google.android.material.chip.Chip style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/chip_desserts"/>

                    <com.google.android.material.chip.Chip style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:text="@string/chip_other"/>
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>


            <TextView
                android:id="@+id/tvRecipesHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/title_recipes"/>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:clipToPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        tools:listitem="@layout/item_recipe"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_recipe"
        android:src="@android:drawable/ic_input_add"
        app:layout_anchor="@id/rvRecipes"
        app:layout_anchorGravity="bottom|end"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
